# evaluate-yourself

./: .dockerignore  .env.development  .env.example  .gitignore  AGENTS.md  AI_VOICE_INTERVIEWER_SETUP.md  AUDIO_SETUP_GUIDE.md  AZURE_SETUP_GUIDE.md  BASELINE_VALIDATION_REPORT.txt  CLAUDE.md  CLERK_SETUP.md  COMPATIBILITY.md  CONVERSATIONAL_AI_SETUP.md  CURSOR_INSTRUCTIONS.md  DEPLOYMENT_ENDPOINTS.md  DESIGN.md  Dockerfile  GITHUB_ACTIONS_DEBUG.md  LICENSE  P0_IMPLEMENTATION_COMPLETE.md  PHASE3_COMPLETE.md  PRODUCT.md  QUICK_AZURE_KEYS.md  QUICK_START.md  README-Python.md  README.md  SHIP_STABILIZE_TESTS_SUMMARY.txt  TEST_STABILIZATION_REPORT.md  VOICE_CHAT_README.md  WEBSOCKET_QUICKSTART.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  pyproject.toml  realtime_voice_chat.py  requirements-base.txt  (+20 more)
backend/: .env.example  Dockerfile  app.db  app.py  app_simple.py  check-env.py  openai_realtime_client.py  requirements.txt  simple_app.py  startup.sh  test_realtime_token.py
deploy/: .env.example
docs/: AZURE_BACKEND_IMPLEMENTATION.md  AZURE_DEPLOYMENT_CONFIG.md  AZURE_INTEGRATION.md  REALTIME_CERTIFICATION_CHECKLIST.md  REALTIME_SECURE_IMPLEMENTATION.md  SETUP_AND_TESTING_GUIDE.md  TROUBLESHOOTING-REALTIME.md  api-endpoints.md  application-diagrams.md  azure-master-reference.md  component-inventory.md  current-ui-audit.md  database-schema.sql  design-system.md  page-specifications.md  provider-matrix.md  realtime-provider-architecture.md  redesign-brief.md  ui-acceptance-criteria.md  user-flows.md
models/: README.md
public/: index.html  manifest.json
(+608 files in other folders)
