[project]
name = "evaluate-yourself-backend"
version = "0.1.0"
description = "Backend runtime and tooling configuration for Evaluate Yourself"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13.1",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "email-validator>=2.1.0",
    "fastapi==0.104.1",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0,<0.28.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.0",
    "numpy>=1.26.0,<3.0.0",
    "openai>=1.10.0,<2.0.0",
    "opencv-python-headless>=4.10.0.84,<5.0.0",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.10.0,<3.0.0",
    "PyJWT>=2.8.0",
    "pyotp>=2.9.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis>=5.0.0",
    "reportlab==4.0.9",
    "requests==2.31.0",
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.12.0",
    "uvicorn==0.24.0",
    "websockets==11.0.3",
]

[dependency-groups]
dev = [
    "black>=26.0.0",
    "mypy>=1.11.0",
]
test = [
    "fakeredis>=2.19.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
default-groups = ["dev", "test"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = [
    "backend/services/auth",
    "backend/services/interview/scoring_service.py",
]
